--- a/lemon.oils/pom.xml
+++ b/lemon.oils/pom.xml
@@ -5,14 +5,14 @@
 
     <parent>
         <groupId>eu.monnetproject</groupId>
-        <artifactId>project</artifactId>
+        <artifactId>lemon.api.project</artifactId>
         <version>1.13.1-SNAPSHOT</version>
         <relativePath>..</relativePath>
     </parent>
-    <artifactId>lemon.oils</artifactId>
+    <artifactId>lemon.api.oils</artifactId>
     <packaging>bundle</packaging>
 
-    <name>eu.monnetproject.lemon.oils OSGi Bundle</name>
+    <name>eu.monnetproject.lemon.api.oils OSGi Bundle</name>
 
     <dependencies>
         <dependency>
@@ -21,11 +21,11 @@
             <version>1.4.0</version>
             <scope>test</scope>
         </dependency>
-        <dependency>
+       <!-- <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>nlp.core</artifactId>
             <version>${project.version}</version>
-        </dependency>
+        </dependency>-->
     </dependencies>
 
     <build>
