Should all compile now
git-svn-id: https://subversion.deri.ie/monnet_dev/sources/trunk/lemon.api@4261 18474ff0-dd96-4de7-8b2b-b9d0bd1f8700

--- a/oils/pom.xml
+++ b/oils/pom.xml
@@ -21,11 +21,11 @@
             <version>1.4.0</version>
             <scope>test</scope>
         </dependency>
-       <!-- <dependency>
+        <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>nlp.core</artifactId>
+            <artifactId>ontology</artifactId>
             <version>${project.version}</version>
-        </dependency>-->
+        </dependency>
     </dependencies>
 
     <build>
