Update version to 1.13.3
git-svn-id: https://subversion.deri.ie/monnet_dev/sources/trunk/lemon.api@4503 18474ff0-dd96-4de7-8b2b-b9d0bd1f8700

--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>eu.monnetproject</groupId>
     <artifactId>lemon.api.project</artifactId>
-    <version>1.13.1-SNAPSHOT</version>
+    <version>1.13.3</version>
     <packaging>pom</packaging>
     <name>Lemon API</name>
 
