--- a/main/pom.xml
+++ b/main/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
         <groupId>eu.monnetproject</groupId>
-        <version>1.13.1-SNAPSHOT</version>
+        <version>1.13.3</version>
     <artifactId>lemon.api</artifactId>
     <packaging>bundle</packaging>
 
