--- a/oils/pom.xml
+++ b/oils/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>eu.monnetproject</groupId>
         <artifactId>lemon.api.project</artifactId>
-        <version>1.13.1-SNAPSHOT</version>
+        <version>1.13.3</version>
         <relativePath>..</relativePath>
     </parent>
     <artifactId>lemon.api.oils</artifactId>
